clusters/talos/apps/ai/vllm/httproute.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: vllm-route
  namespace: vllm
spec:
  parentRefs:
  - group: gateway.networking.k8s.io
    kind: Gateway
    name: gateway-internal
    namespace: gateway
  hostnames:
  - vllm.vanillax.me
  rules:
  - matches:
    - path:
        type: PathPrefix
        value: "/"
    timeouts:
      request: 30m
      backendRequest: 30m
    backendRefs:
    - group: ''
      kind: Service
      name: vllm-service
      port: 8000
      weight: 1
